# stellargive

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: audit.yml  ci-contract.yml  (+1 more)
contracts/stellar-give/: Cargo.toml
contracts/stellar-give/src/: lib.rs  test.rs
contracts/stellar-give/test_snapshots/tests/: claim_after_deadline_when_target_not_met.1.json  claim_funds_fee_deducted_from_beneficiary_payout.1.json  create_campaign_emits_created_event.1.json  create_campaign_rejects_non_token_contract.1.json  donate_anonymous_emits_masked_event_and_transfers_funds.1.json  donate_non_anonymous_emits_real_address.1.json  donate_updates_raised_and_status.1.json  empty_beneficiaries_rejected.1.json  id_generation_is_sequential_and_collision_free.1.json  invalid_shares_not_summing_to_10000_rejected.1.json  split_50_50_distributes_evenly.1.json  split_uneven_three_way_with_rounding.1.json  test_add_and_get_updates.1.json  test_add_update_campaign_missing.1.json  test_add_update_empty_content.1.json  test_add_update_max_limit.1.json  test_add_update_unauthorized.1.json  top_donors_accumulates_repeat_donor.1.json  top_donors_single_donation.1.json  top_donors_sorted_descending.1.json  top_donors_trims_to_five.1.json  top_donors_updates_rank_after_repeat_donation.1.json  unauthorized_claim_fails.1.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  SECURITY.md  SETUP.md
examples/: README.md  donate-cli.js
frontend/: .dockerignore  Dockerfile  README.md  package.json
scripts/: deploy-contract.sh  fund-testnet.sh  generate-types.sh
(+19 files in other folders)
